--- a/css/style.css
+++ b/css/style.css
@@ -2,74 +2,51 @@
 
 * {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
-/* 
+
 body {
   font-family: 'Questrial', sans-serif;
   background-color: #666;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   max-height: 100vh;
   margin: 0;
 }
 
+
 h1 {
   color: #fff;
+  height: 10vh;
+  text-align: center;
+  font-size: 40px;
+  padding: 20px;
 }
 
-.screen {
-  cursor: pointer;
-  width: 60%;
-  background-color: #000 !important;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-}
-
-.controls {
-  background: #333;
-  color: #fff;
-  width: 60%;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
+.main-container {
+  width: 100%;
+  height: 90vh;
+  padding: 0 100px;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 10px;
 }
 
-.controls .btn {
-  border: 0;
-  background: transparent;
-  cursor: pointer;
+.video-container {
+  width: 50%;
+  position: relative;
+  /* transform: translateY(px); */
+  padding: 50px;
 }
 
-.controls .fa-play {
-  color: #28a745;
+.video-container img {
+  width: 100%;
+  height: 50vh;
+  /* border: 2px solid black; */
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 1);
+  border-radius: 10px;
 }
 
-.controls .fa-stop {
-  color: #dc3545;
+.other-container {
+  width: 50%;
+  height: 100%;
 }
-
-.controls .fa-pause {
-  color: #fff;
-}
-
-.controls .timestamp {
-  color: #fff;
-  font-weight: bold;
-  margin-left: 10px;
-}
-
-.btn:focus {
-  outline: 0;
-}
-
-@media (max-width: 800px) {
-  .screen,
-  .controls {
-    width: 90%;
-  }
-} */
