--- a/css/style.css
+++ b/css/style.css
@@ -8,14 +8,14 @@
 
 body {
   font-family: 'Questrial', sans-serif;
-  background-color: #666;
-  max-height: 100vh;
+  /* background-color: #666; */
+  background-color: #fff;
+  height: 100vh;
   margin: 0;
 }
 
 
 h1 {
-  color: #fff;
   height: 10vh;
   text-align: center;
   font-size: 40px;
@@ -27,26 +27,61 @@ h1 {
   height: 90vh;
   padding: 0 100px;
   display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .video-container {
   width: 50%;
-  position: relative;
-  /* transform: translateY(px); */
-  padding: 50px;
+  /* border: 2px solid red; */
 }
 
 .video-container img {
   width: 100%;
   height: 50vh;
-  /* border: 2px solid black; */
-  box-shadow: 0px 5px 15px rgba(0, 0, 0, 1);
+  box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.302), 0 2px 6px 2px rgba(60, 64, 67, 0.149);
+  /* box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.5); */
   border-radius: 10px;
+  position: relative;
+  transform: translateY(18vh);
 }
 
 .other-container {
   width: 50%;
   height: 100%;
+  /* border: 2px solid green; */
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.other-container span {
+  font-size: 35px;
+}
+
+.result-container {
+  padding: 20px 0px;
+}
+
+.result {
+  font-size: 40px;
+  color: #00796b;
+}
+
+
+.flip-btn {
+  background: #00796b;
+  color: #fff;
+  padding: 20px 30px;
+  font-size: 30px;
+  border-radius: 50px;
+  border: none;
+  outline: none;
+  border-bottom: 10px solid black;
+}
+
+.flip-btn:active {
+  margin-top: 7px;
+  transform: translateY(3px);
+  border-bottom: 3px solid black;
 }
