--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@
 
 body {
   font-family: 'Questrial', sans-serif;
-  /* background-color: #666; */
   background-color: #fff;
   height: 100vh;
   margin: 0;
@@ -31,14 +30,12 @@ h1 {
 
 .video-container {
   width: 50%;
-  /* border: 2px solid red; */
 }
 
 .video-container img {
   width: 100%;
   height: 50vh;
   box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.302), 0 2px 6px 2px rgba(60, 64, 67, 0.149);
-  /* box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.5); */
   border-radius: 10px;
   position: relative;
   transform: translateY(18vh);
@@ -57,6 +54,7 @@ h1 {
 
 .other-container span {
   font-size: 35px;
+  margin-right: 10px;
 }
 
 .result-container {
@@ -66,6 +64,7 @@ h1 {
 .result {
   font-size: 40px;
   color: #00796b;
+  font-weight: bolder;
 }
 
 
@@ -77,11 +76,10 @@ h1 {
   border-radius: 50px;
   border: none;
   outline: none;
-  border-bottom: 10px solid black;
+  border-bottom: 10px solid rgba(0, 0, 0, 0.836);
 }
 
 .flip-btn:active {
   margin-top: 7px;
-  transform: translateY(3px);
   border-bottom: 3px solid black;
 }
