--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ section {
   width: 100%;
   height: 100vh;
   background-color: #16161a;
+  color: rgba(255, 255, 255, 0.115);
   overflow: hidden;
 }
 
@@ -118,6 +119,7 @@ section .wave.wave4 {
   box-shadow: 0 2px 4px 0 rgba(60, 64, 67, 0.602), 0 4px 12px 4px rgba(60, 64, 67, 0.249);
   border-radius: 10px;
   position: relative;
+  background-color: #16161a;
   transform: translateY(14vh);
 }
 
