--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ section .wave {
   left: 0;
   width: 100%;
   height: 100px;
-  background: url(wave.png);
+  background: url(assets/wave.png);
   background-size: 1000px 100px;
 }
 
@@ -87,14 +87,25 @@ section .wave.wave4 {
 
 /* Wave Animation End */
 
-.heading {
-  text-align: center;
-  font-size: 35px;
+.navbar {
   padding: 10px;
   background-color: #7f5af0;
   color: #fff;
   width: 100%;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.logo {
+  /* width: 100px; */
+  height: 65px;
+}
+
+.heading {
+  text-align: center;
+  font-size: 35px;
 }
 
 .heading:hover {
